--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,9 @@
-DB_CONN="mongodb+srv://nikhilrajak021:admin123@cluster0.a9rxapj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-DB_DOC="mongodb+srv://nikhilrajak021:admin123@cluster0.a9rxapj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-DB_PAT="mongodb+srv://nikhilrajak021:admin123@cluster0.a9rxapj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-DB_DEP="mongodb+srv://nikhilrajak021:admin123@cluster0.a9rxapj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-DB_Admin="mongodb+srv://nikhilrajak021:admin123@cluster0.a9rxapj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-
-# DB_CONN= "mongodb+srv://login:login123@cluster0.zd8yt.mongodb.net/?retryWrites=true&w=majority"
-# DB_DOC= "mongodb+srv://doctor:doctor123@cluster0.zd8yt.mongodb.net/?retryWrites=true&w=majority"
-# DB_PAT= "mongodb+srv://patient:patient123@cluster0.zd8yt.mongodb.net/?retryWrites=true&w=majority"
-# DB_DEP= "mongodb+srv://reachForm:cil123@cluster0.zd8yt.mongodb.net/?retryWrites=true&w=majority"
+DB_CONN= "mongodb://localhost:27017/Medicare"
+DB_DOC= "mongodb://doctor:doctor123@medicare.d27esrk.mongodb.net/?retryWrites=true&w=majority&appName=Medicare"
+DB_PAT= "mongodb://patient:patient123@medicare.d27esrk.mongodb.net/?retryWrites=true&w=majority&appName=Medicare"
+DB_DEP= "mongodb://reachForm:cil123@medicare.d27esrk.mongodb.net/?retryWrites=true&w=majority&appName=Medicare"
+ADMIN ="mongodb://localhost:27017/Medicare"
+# DB_CONN= "mongodb+srv://login:login123@medicare.d27esrk.mongodb.net/?retryWrites=true&w=majority&appName=Medicare"
+# DB_DOC= "mongodb+srv://doctor:doctor123@medicare.d27esrk.mongodb.net/?retryWrites=true&w=majority&appName=Medicare"
+# DB_PAT= "mongodb+srv://patient:patient123@medicare.d27esrk.mongodb.net/?retryWrites=true&w=majority&appName=Medicare"
+# DB_DEP= "mongodb+srv://reachForm:cil123@medicare.d27esrk.mongodb.net/?retryWrites=true&w=majority&appName=Medicare"
