--- a/server/package.json
+++ b/server/package.json
@@ -10,19 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.20.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "jsonwebtoken": "^9.0.0",
-    "lodash": "^4.17.21",
-    "mongoose": "^6.8.0",
-    "mongoose-findorcreate": "^4.0.0",
-    "nodemon": "^2.0.20",
-    "passport": "^0.6.0",
-    "passport-local-mongoose": "^7.1.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.3"
   }
 }
