--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,12 @@
-DB_CONN= "mongodb://localhost:27017/Medicare"
-DB_DOC= "mongodb://doctor:doctor123@medicare.d27esrk.mongodb.net/?retryWrites=true&w=majority&appName=Medicare"
-DB_PAT= "mongodb://patient:patient123@medicare.d27esrk.mongodb.net/?retryWrites=true&w=majority&appName=Medicare"
-DB_DEP= "mongodb://reachForm:cil123@medicare.d27esrk.mongodb.net/?retryWrites=true&w=majority&appName=Medicare"
+
 ADMIN ="mongodb://localhost:27017/Medicare"
+ 
+ONLINE_ADMIN ="mongodb+srv://Medicare:1234@cluster0.x4prrot.mongodb.net/Medicare?retryWrites=true&w=majority&appName=Cluster0"
 # DB_CONN= "mongodb+srv://login:login123@medicare.d27esrk.mongodb.net/?retryWrites=true&w=majority&appName=Medicare"
 # DB_DOC= "mongodb+srv://doctor:doctor123@medicare.d27esrk.mongodb.net/?retryWrites=true&w=majority&appName=Medicare"
 # DB_PAT= "mongodb+srv://patient:patient123@medicare.d27esrk.mongodb.net/?retryWrites=true&w=majority&appName=Medicare"
 # DB_DEP= "mongodb+srv://reachForm:cil123@medicare.d27esrk.mongodb.net/?retryWrites=true&w=majority&appName=Medicare"
+
+# Path: server
+Gmail = "9451806@gmail.com"
+GmailPass = "Vit@bhopal2020"
