--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 
 ADMIN ="mongodb://localhost:27017/Medicare"
  
-ONLINE_ADMIN ="mongodb+srv://Medicare:1234@cluster0.x4prrot.mongodb.net/Medicare?retryWrites=true&w=majority&appName=Cluster0"
+#ONLINE_ADMIN ="mongodb+srv://Medicare:1234@cluster0.x4prrot.mongodb.net/Medicare?retryWrites=true&w=majority&appName=Cluster0"
 
 
 # Path: server
