--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,6 @@ ADMIN ="mongodb://localhost:27017/Medicare"
 
 
 # Path: server
+# Path: server
+Gmail = "9451806@gmail.com"
+GmailPass = "Vit@bhopal2020"
