All-file- modifly

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,16 @@
 {
     "cSpell.words": [
+        "Andhra",
+        "Arunachal",
+        "Closingtime",
+        "deletehandle",
+        "departmentphoneno",
+        "docplace",
         "Ladakh",
+        "Openingtime",
+        "Phoneno",
         "Pradesh",
+        "setdoctor",
         "telemedicine",
         "uttarakhand"
     ]
