--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,10 @@
         "deletehandle",
         "departmentphoneno",
         "docplace",
+        "Jharkhand",
         "Ladakh",
+        "Madhya",
+        "Meghalaya",
         "Openingtime",
         "Phoneno",
         "Pradesh",
