Image-Uploaded-Success

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "Meghalaya",
         "Openingtime",
         "Phoneno",
+        "photolink",
         "Pradesh",
         "setdoctor",
         "telemedicine",
