--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "firebase": "^10.11.1",
     "query-string": "^7.1.1",
     "queryselector": "^0.1.0",
     "react": "^18.1.0",
