--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,10 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.3"
+    "lodash": "^4.17.21",
+    "mongoose": "^8.3.3",
+    "mongoose-findorcreate": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
